feat: Upgrade various libraries to use jakarta namespace
Fixes OD-3123